# CommerceHub-AI-platform

./: .coverage  .dockerignore  .env.example  .gitignore  CommerceHub_AI_Enterprise_Sprint1_Execution_Plan.docx  Dockerfile  README.md  docker-compose.yml  package-lock.json  pytest.ini
backend/: .dockerignore  .editorconfig  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/#/: pyvenv.cfg
backend/a/: pyvenv.cfg
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_auth_initial.py  0002_customer_addresses.py  0003_wishlist.py  0004_cart.py  0005_orders.py  20260709_0001_create_sellers_table.py  20260709_0002_create_categories_table.py  20260709_0003_create_brands_table.py  20260709_0004_create_products_table.py  20260709_0005_create_product_images_table.py  20260709_0006_create_product_extension_tables.py  20260709_0007_create_inventory_tables.py  20260709_0008_create_warehouses_table.py  20260709_0009_enable_warehouse_inventory_transfers.py  20260709_0010_allow_variant_attribute_value_reuse.py  20260709_0011_create_auth_tables.py
backend/app/: __init__.py  celery_app.py  logging_config.py  main.py  security.py  worker.py
backend/app/admin/: __init__.py  models.py  repository.py  routes.py  (+2 more)
backend/docs/: backend-foundation.md
backend/if/: pyvenv.cfg
backend/need/: pyvenv.cfg
backend/new/: pyvenv.cfg
backend/only/: pyvenv.cfg
backend/scripts/: run_checks.sh
backend/tests/: conftest.py  factories.py  fixtures.py
backend/you/: pyvenv.cfg
(+574 files in other folders)
