[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commercehub-ai-backend"
version = "0.1.0"
description = "Enterprise backend foundation for CommerceHub AI."
requires-python = ">=3.12"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["app"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["A", "B", "C4", "E", "F", "I", "N", "UP", "W"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
namespace_packages = true
mypy_path = "."
exclude = ["alembic/versions"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "anyio: async tests",
]

